IGNITE-15783 Mapper API and initial implementation. (#424)